--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "rescript:format": "rescript format",
     "next:dev": "next dev",
     "next:build": "next build",
-    "next:start": "next start"
+    "next:start": "next start",
+    "api:start": "json-server --watch api.json -p 3001"
   },
   "dependencies": {
     "@emotion/cache": "11.4.0",
@@ -28,5 +29,7 @@
     "react-dom": "17.0.2",
     "rescript": "9.1.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "json-server": "^0.16.3"
+  }
 }
