--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@rescript/react": "0.10.3",
     "@rescriptbr/ancestor": "0.3.3",
     "@ryyppy/rescript-promise": "2.1.0",
+    "date-fns": "2.24.0",
     "next": "11.0.1",
     "next-transpile-modules": "8.0.0",
     "normalize.css": "8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "3.24.5",
     "rescript": "9.1.4"
   },
   "devDependencies": {
