--- a/bsconfig.json
+++ b/bsconfig.json
@@ -7,7 +7,8 @@
   "bs-dependencies": [
     "@rescript/react",
     "@rescriptbr/ancestor",
-    "@ryyppy/rescript-promise"
+    "@ryyppy/rescript-promise",
+    "@rescriptbr/react-query"
   ],
   "ppx-flags": [],
   "sources": [
